# src/router.ts
@@ -31,12 +31,15 @@ router.get('/treino', new TreinoController().getTreino)
 router.post('/rotina', new RotinaController().cadastro_Rotina)
 router.get('/rotina', new RotinaController().getRotina)
 
-router.post('/exercicio', new ExercicioController().cadastro_Exercicio)
-router.get('/exercicio', new ExercicioController().getTreino)
+router.post('/CadastrarExercicios', new ExercicioController().cadastro_Exercicio)
+router.get('/ConsultarTodosExercicios', new ExercicioController().getExercicios)
+router.post('/ConsultarExerciciosUnico/:id', new ExercicioController().consultarExerciciosUnico)
+router.put('/AlterarDadosExercicios/:id', new ExercicioController().alterarDadosExercicios)
+router.delete('/ApagarExercicios/:id', new ExercicioController().apagarExercicios)
 
 router.post('/CadastrarCategoria', new CategoriaController().cadastro_Categoria)
-router.get('/ConsulCategoria', new CategoriaController().getCadastro)
-router.post('/ConsultarCategoriaUnico/:id', new CategoriaController().consultarUsuariosUnico)
+router.get('/ConsultarTodosCategoria', new CategoriaController().getCadastro)
+router.post('/ConsultarCategoriaUnico/:id', new CategoriaController().consultarCategoriaUnico)
 router.put('/AlterarDadosCategoria/:id', new CategoriaController().alterarDadosPersonal)
 router.delete('/ApagarCategoria/:id', new CategoriaController().apagarPersonal)
 
